Update logo, fix responsiveness on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,7 +17,8 @@
   /* background-color: #6f6d94 !important */
   /* background-color: #cfd3f2 !important */
   /* background-color: #6f6d94 !important */
-  background-color: #666666 !important
+  /* background-color: #666666 !important */
+  background-color: #747e86 !important;
 }
 
 .bg-navbar {
@@ -118,7 +119,11 @@
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #0d6efd;
-  --bs-btn-disabled-border-color: #0d6efd; */ */
+  --bs-btn-disabled-border-color: #0d6efd; */
+}
+
+.lucida-font {
+  font-family: "Lucida Sans" !important;
 }
 
 .navbar-brand {
